packages/gatsby-theme-carbon/src/components/Caption/Caption.module.scss
.caption {
  @include type-style('body-short-01');
  --space: #{$spacing-05};
}

div .caption * {
  @include type-style('body-short-01');
  display: inline;
}

// Responsive by default
.caption-responsive {
  // 6/8 columns
  @include breakpoint('md') {
    width: 75%;
  }

  // 6/12 columns wide
  @include breakpoint('lg') {
    width: 50%;
  }
}

// If caption is inside a user specified row then allow the grid code to set the width
:global(.cds--row) .caption {
  width: 100%;
}

